tests/semantic/type_udef/type_udef.err
Error: Undefined type undef in definition of union type U in file type_udef.dl at line 9
.type U = symbol | undef                    // error
^----------------------------------------------------
Error: Undefined type undef in definition of field x in file type_udef.dl at line 10
.type R = [ x : undef, y : number ]         // error
^----------------------------------------------------
Warning: No rules/facts defined for relation A in file type_udef.dl at line 11
.decl A(x : undef)                          // error
------^----------------------------------------------
Error: Undefined type in attribute x:undef in file type_udef.dl at line 11
.decl A(x : undef)                          // error
------------^----------------------------------------
Error: Type cast is to undeclared type undef in file type_udef.dl at line 13
B(as(1,undef)).                             // error
--^--------------------------------------------------
Error: Type undef has not been declared in file type_udef.dl at line 14
B(*undef[1]).                               // error
--^--------------------------------------------------
Error: Undefined type undef in definition of union type c.U1 in file type_udef.dl at line 16
    .type U1 = undef | symbol               // error
----^------------------------------------------------
Error: Undefined type undef in definition of union type c.U2 in file type_udef.dl at line 17
    .type U2 = number | T                   // error
----^------------------------------------------------
Error: Undefined type undef in definition of field x in file type_udef.dl at line 18
    .type R1 = [ x : undef ]                // error
----^------------------------------------------------
Error: Undefined type undef in definition of field y in file type_udef.dl at line 19
    .type R2 = [ y : T ]                    // error
----^------------------------------------------------
Warning: No rules/facts defined for relation c.A1 in file type_udef.dl at line 20
    .decl A1(x : undef)                     // error
----------^------------------------------------------
Error: Undefined type in attribute x:undef in file type_udef.dl at line 20
    .decl A1(x : undef)                     // error
-----------------^-----------------------------------
Warning: No rules/facts defined for relation c.A2 in file type_udef.dl at line 21
    .decl A2(x : T)                         // error
----------^------------------------------------------
Error: Undefined type in attribute x:undef in file type_udef.dl at line 21
    .decl A2(x : T)                         // error
-----------------^-----------------------------------
Error: Type cast is to undeclared type undef in file type_udef.dl at line 22
    B(as(2,undef)).                         // error
------^----------------------------------------------
Error: Type cast is to undeclared type T in file type_udef.dl at line 23
    B(as(3,T)).                             // error
------^----------------------------------------------
Error: Type undef has not been declared in file type_udef.dl at line 24
    B(*undef[]).                            // error
------^----------------------------------------------
Error: Type T has not been declared in file type_udef.dl at line 25
    B(*T[2]).                               // error
------^----------------------------------------------
Error: Not all clauses could be typechecked due to other errors present
16 errors generated, evaluation aborted
